--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="nav-right-section">
                 <li><a href="#">Gmail</a></li>
                 <li><a href="#">Imágenes</a></li>
                 <li><a href="#"><img src="images/menu.png" alt="menu"></a></li>
