--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
             <ul class="nav-right-section">
                 <li><a href="#">Gmail</a></li>
                 <li><a href="#">Imágenes</a></li>
-                <li><a href="#"><img src="images/menu.png" alt="menu"></a></li>
-                <li><a href="#"><img src="images/user.png" alt="user"></a></li>  
+                <li class="menu-icon">
+                    <a href="#"></a>
+                </li>
+                <li><a href="#"><img src="https://lh3.googleusercontent.com/a-/AAuE7mCQMCbdT0M_F-LN6SlJJGuxF-7_S19_P7BppxzwKQ=s96-cc-rg" alt="user"></a></li>  
             </ul> 
         </nav>
     </header>
