--- a/index.html
+++ b/index.html
@@ -21,19 +21,32 @@
             </ul> 
         </nav>
     </header>
-    <section>
-        <div class="container">
-            <div class="googleContainer">
-                <figure>    
-                    <img src="images/google.png" alt="Google" class="imgGoogle">
-                </figure>
+    <main>
+        <section class="main-logo">
+            <img src="" alt="">
+        </section>
+        <section class="main-input">
+            <div class="main-input-container">
+                <span class="search-icon">
 
+                </span>
                 <input type="text">
-                <button>Buscar con Google</button><button>I´m Feeling Lucky</button>
+                <a class="micro-icon" href="#"></a>
             </div>
-
-        </div>   
-    </section>
+        </section>
+        <section class="main-buttons">
+            <div>
+                <button>
+                    Buscar con Google
+                </button>
+            </div>
+            <div>
+                <button>
+                    Me siento con suerte
+                </button>
+            </div>
+        </section>
+    </main>
     <footer>
         <div class="detailsLeft">
             <p><a href="#">Publicidad</a></p>
