Maquetado de footer

--- a/index.html
+++ b/index.html
@@ -48,18 +48,29 @@
         </section>
     </main>
     <footer>
-        <div class="detailsLeft">
-            <p><a href="#">Publicidad</a></p>
-            <p><a href="#">Negocios</a></p>
-            <p><a href="#">Acerca de</a></p>
-            <p><a href="#">Cómo funciona la Búsqueda</a></p>
-        </div>
-
-        <div class="detailsRight">
-            <p><a href="#">Privacidad</a></p>
-            <p><a href="#">Condiciones</a></p>
-            <p><a href="#">Preferencias</a></p>
-        </div>
+        <ul class="footer-left">
+            <li>
+                <a href="#">Publicidad</a>
+            </li>
+            <li><a href="#">Negocios</a></li>
+            <li>
+                <a href="#">Acerca de</a>
+            </li>
+            <li>
+                <a href="#">Cómo funciona la Búsqueda</a>
+            </li>
+        </ul>
+        <ul class="footer-right">
+            <li>
+                <a href="#">Privacidad</a>
+            </li>
+            <li>
+                <a href="#">Condiciones</a>
+            </li>
+            <li>
+                <a href="#">Preferencias</a>
+            </li>
+        </ul>
 
     </footer>
 </body>
